--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.0",
     "prop-type": "0.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
